--- a/src/index.html
+++ b/src/index.html
@@ -8,40 +8,48 @@
     <title>简历 | 彭梁 - pengliang</title>
 </head>
 
-<body>
+<body class="container">
 
-    <div class="container">
-        <header class="header">
-            <section class="section hd">
-                <div class="title">
-                    <p class="name">
-                        彭 梁
-                    </p>
-                </div>
+    <header class="header">
+        <section class="section hd">
+            <div class="title">
+                <p class="name">
+                    彭 梁
+                </p>
+            </div>
 
-                <div class="job">
-                    <h2>
-                        Web 前端开发工程师 <span>/ 重庆</span>
-                    </h2>
-                </div>
-            </section>
-            <section class="section">
-                <div class="info">
-                    <p>男 / 1996.09</p>
-                    <p>本科 / 2019年毕业 · 3年工作经验</p>
-                    <p>桂林理工大学 · 信息与计算科学</p>
-                </div>
-                <div class="link">
-                    <p>plfe.cn</p>
-                    <p>github.com/PL-FE</p>
-                    <p>penglianger@qq.com</p>
-                    <p>185-9327-6510</p>
-                </div>
-            </section>
-        </header>
+            <div class="job">
+                <h2>
+                    Web 前端开发工程师 <span>/ 重庆</span>
+                </h2>
+            </div>
+        </section>
+        <section class="section">
+            <div class="info">
+                <p>男 / 1996.09</p>
+                <p>本科 / 2019年毕业 · 3年工作经验</p>
+                <p>桂林理工大学 · 信息与计算科学</p>
+            </div>
+            <address class="address">
+                <ul>
+                    <li><a href="https://pl-fe.cn" target="_blank"><span class="contact-link">pl-fe.cn</span><i
+                                class="iconfont icon-homepage"></i></a></li>
+                    <li><a href="https://github.com/PL-FE" target="_blank"><span
+                                class="contact-link">github.com/PL-FE</span><i class="iconfont icon-github"></i></a>
+                    </li>
+                    <li><a href="mailto:penglianger@qq.com" target="_blank"><span
+                                class="contact-link">penglianger@qq.com</span><i class="iconfont icon-email"></i></a>
+                    </li>
+                    <li><a href="tel:185-9327-6510" target="_blank"><span class="contact-link">185-9327-6510</span><i
+                                class="iconfont icon-phone"></i></a></li>
+                </ul>
+            </address>
+        </section>
+    </header>
 
-        <div class="container-body">
-            <section class="section">
+    <main class="container-body">
+        <div class="container-body-item">
+            <article class="article">
                 <header class="section-hd">
                     <span class="line"></span>
                     <h3 class="title">工作经验</h3>
@@ -49,31 +57,82 @@
                 </header>
 
                 <div class="section-bd">
-                    <div class="item item-main">
-                        <span>2017.07 ~ 至今</span>
-                        <span class="mid">腾讯科技(深圳)有限公司</span>
+                    <div class="item item-top">
+                        <span>2019.07 ~ 2022.11</span>
+                        <span class="mid">易宝（东莞）软件有限公司</span>
                         <span>工作</span>
                     </div>
                     <div class="item item-stage">
-                        <span>WXG · 微信支付</span>
-                        <span>2019 - 至今 </span>
+                        <span><i class="iconfont icon-dot"></i>CoNet</span>
+                        <span>2021.02 - 2022.11</span>
                     </div>
                     <div class="item item-info">
-                        <i class="iconfont icon-dot"></i>
-                        腾讯云AI体验中心 · 微信小程序
                         <p>
-                            研发负责人全栈开发 负责整个小程序的架构设计及研发，将页面场景规范配置化，利用小程序云开发Node.js能力完成AI接口调用。
+                            <strong>研发负责人</strong> 全栈开发 <em>负责</em>整个小程序的架构设计及研发，将页面场景规范配置化，利用小程序云开发Node.js能力完成AI接口调用。
+                            在原生小程序的写法基础上，基于gulp开发轻量型小程序工程化工具，实现单文件页面组件化开发、依赖处理等能力；封装小程序非侵入式语法增强类库，拓展数据状态管理、事件管理、计算属性等能力。
+                        </p>
+                    </div>
+
+                    <div class="item item-stage">
+                        <span><i class="iconfont icon-dot"></i>站点集成设计</span>
+                        <span>2019.07 - 2021.01</span>
+                    </div>
+                    <div class="item item-info">
+                        <p>
+                            <strong>研发负责人</strong> 全栈开发 <em>负责</em>整个小程序的架构设计及研发，将页面场景规范配置化，利用小程序云开发Node.js能力完成AI接口调用。
                             在原生小程序的写法基础上，基于gulp开发轻量型小程序工程化工具，实现单文件页面组件化开发、依赖处理等能力；封装小程序非侵入式语法增强类库，拓展数据状态管理、事件管理、计算属性等能力。
                         </p>
                     </div>
                 </div>
-            </section>
-
+            </article>
         </div>
+        <div class="container-body-item">
+            <article class="article">
+                <header class="section-hd">
+                    <span class="line"></span>
+                    <h3 class="title">专业能力</h3>
+                    <span class="line"></span>
+                </header>
 
+                <div class="section-bd">
+                    <div class="item item-info">
+                        <p>
+                            <i class="iconfont icon-dot"></i>
+                            近4年前端学习与开发经验，2年前端工作经验。
+                        </p>
+                        <p>
+                            <i class="iconfont icon-dot"></i>
+                            掌握Web前端开发基本技能，熟悉W3C标准、HTML、CSS、UI重构、页面布局、响应式布局等，领悟视觉与设计，重视页面交互与用户体验。
+                        </p>
+                    </div>
+                </div>
+            </article>
+            <article class="article">
+                <header class="section-hd">
+                    <span class="line"></span>
+                    <h3 class="title">个人作品</h3>
+                    <span class="line"></span>
+                </header>
 
+                <div class="section-bd">
+                    <div class="item item-info">
+                        <p>
+                            <i class="iconfont icon-dot"></i>
+                            个人主页 · 技术博客
+                        </p>
+                        <p>
+                            爱好琢磨一些有趣有意思的东西，并以congm.in作为个人域名，设计细节并开发部署个人主页，搭建维护过基于Wordpress、Ghost、Docsify等的技术博客。
+                        </p>
+                        <p>
+                            <i class="iconfont icon-dot"></i>
+                            开源作品
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </main>
 
-    </div>
 
 </body>
 
