# 完善简历内容

--- a/src/index.html
+++ b/src/index.html
@@ -1,152 +1,340 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=no"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>简历 | 彭梁 - pengliang</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <p class="last-modified">最后更新时间：2019年06月</p>
     <div class="container">
-        <header class="header">
-            <section class="section hd">
-                <div class="title">
-                    <p class="name">
-                        彭 梁
-                    </p>
-                </div>
+      <header class="header">
+        <section class="section hd">
+          <div class="title">
+            <p class="name">彭 梁</p>
+          </div>
 
-                <div class="job">
-                    <h2>
-                        Web 前端开发工程师 <span>/ 重庆</span>
-                    </h2>
-                </div>
-            </section>
-            <section class="section">
-                <div class="info">
-                    <p>男 / 1996.09</p>
-                    <p>本科 / 2019年毕业 · 3年工作经验</p>
-                    <p>桂林理工大学 · 信息与计算科学</p>
-                </div>
-                <address class="address">
-                    <ul>
-                        <li><a href="https://pl-fe.cn" target="_blank"><span class="contact-link">pl-fe.cn</span><i
-                                    class="iconfont icon-homepage"></i></a></li>
-                        <li><a href="https://github.com/PL-FE" target="_blank"><span
-                                    class="contact-link">github.com/PL-FE</span><i class="iconfont icon-github"></i></a>
-                        </li>
-                        <li><a href="mailto:penglianger@qq.com" target="_blank"><span
-                                    class="contact-link">penglianger@qq.com</span><i
-                                    class="iconfont icon-email"></i></a>
-                        </li>
-                        <li><a href="tel:185-9327-6510" target="_blank"><span
-                                    class="contact-link">185-9327-6510</span><i class="iconfont icon-phone"></i></a>
-                        </li>
-                    </ul>
-                </address>
-            </section>
-        </header>
+          <div class="job">
+            <h2>Web 前端开发工程师 <span>/ 重庆</span></h2>
+          </div>
+        </section>
+        <section class="section">
+          <div class="info">
+            <p>男 / 1996.09</p>
+            <p>本科 / 2019年毕业 · 3年工作经验</p>
+            <p>桂林理工大学 · 信息与计算科学</p>
+          </div>
+          <address class="address">
+            <ul>
+              <li>
+                <a href="https://pl-fe.cn" target="_blank"
+                  ><span class="contact-link">pl-fe.cn</span
+                  ><i class="iconfont icon-homepage"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://github.com/PL-FE" target="_blank"
+                  ><span class="contact-link">github.com/PL-FE</span
+                  ><i class="iconfont icon-github"></i
+                ></a>
+              </li>
+              <li>
+                <a href="mailto:penglianger@qq.com" target="_blank"
+                  ><span class="contact-link">penglianger@qq.com</span
+                  ><i class="iconfont icon-email"></i
+                ></a>
+              </li>
+              <li>
+                <a href="tel:185-9327-6510" target="_blank"
+                  ><span class="contact-link">185-9327-6510</span
+                  ><i class="iconfont icon-phone"></i
+                ></a>
+              </li>
+            </ul>
+          </address>
+        </section>
+      </header>
 
-        <main class="container-body">
-            <div class="container-body-item">
-                <article class="article">
-                    <header class="section-hd">
-                        <span class="line"></span>
-                        <h3 class="title">工作经验</h3>
-                        <span class="line"></span>
-                    </header>
+      <main class="container-body">
+        <div class="container-body-item">
+          <article class="article">
+            <header class="section-hd">
+              <span class="line"></span>
+              <h3 class="title">工作经验</h3>
+              <span class="line"></span>
+            </header>
 
-                    <div class="section-bd">
-                        <div class="item item-top">
-                            <span>2019.07 ~ 2022.11</span>
-                            <span class="mid">易宝（东莞）软件有限公司</span>
-                            <span>工作</span>
-                        </div>
-                        <div class="item item-stage">
-                            <span><i class="iconfont icon-dot"></i>CoNet</span>
-                            <span>2021.02 - 2022.11</span>
-                        </div>
-                        <div class="item item-info">
-                            <p>
-                                <strong>研发负责人</strong> 全栈开发
-                                <em>负责</em>整个小程序的架构设计及研发，将页面场景规范配置化，利用小程序云开发Node.js能力完成AI接口调用。
-                                在原生小程序的写法基础上，基于gulp开发轻量型小程序工程化工具，实现单文件页面组件化开发、依赖处理等能力；封装小程序非侵入式语法增强类库，拓展数据状态管理、事件管理、计算属性等能力。
-                            </p>
-                        </div>
+            <div class="section-bd">
+              <div class="item item-top">
+                <span>2019.07 ~ 2022.11</span>
+                <span class="mid">易宝（东莞）软件有限公司</span>
+                <span>工作</span>
+              </div>
+              <div class="item item-stage">
+                <span
+                  ><i class="iconfont icon-dot"></i>CoNet ·
+                  在线作业+自动化工具</span
+                >
+                <span>2021.02 - 2022.11</span>
+              </div>
+              <div class="item item-info">
+                <p></p>
+                <p>
+                  <em>核心开发</em>
+                  主要负责重构版本项目的搭建、团队前端公共基础的建设与规划，以及模块开发。主要技术栈：<strong
+                    >Vue2</strong
+                  >
+                  、
+                  <strong>Componsition API</strong>
+                  、<strong> Mapbox GL(地图引擎)</strong> 、
+                  <strong>Element UI</strong> 等。
+                </p>
+                <p>
+                  <em>项目搭建</em>使用
+                  <strong>Vue Cli</strong> 进行项目搭建，结合
+                  <strong>Eslint</strong> 和
+                  <strong>Githook</strong>
+                  保证代码质量及校验提交信息，引入字体图标库，减少 http 请求。
+                </p>
+                <p>
+                  <em>公共基础</em>借鉴
+                  <strong>Element UI</strong> 组件库的思路，通过自定义
+                  loader，实现可演示可复制代码的轻量级组件文档库，加速理解公共组件的使用。
+                  统一常用函数、指令、api等。
+                </p>
+                <p>
+                  <em>模块开发</em>负责迭代系统模块及地图可视化操作。
+                  由于项目中数据呈现基本为表格及表单等形式，输出了
+                  <strong>CustomTable</strong> 、<strong>CustomForm</strong>
+                  、<strong>CustomDialog</strong> 、<strong
+                    >LoadingButton</strong
+                  >
+                  等公共组件,能够满足80%的业务需求。 及针对优化大数据量
+                  <strong>el-select</strong> 的指令。
+                  对地图进行实例化管理，将地图的操作封装成类，实现地图的多边形绘制、框选、高亮、计算距离等功能，增强代码复用。
+                </p>
+              </div>
 
-                        <div class="item item-stage">
-                            <span><i class="iconfont icon-dot"></i>站点集成设计</span>
-                            <span>2019.07 - 2021.01</span>
-                        </div>
-                        <div class="item item-info">
-                            <p>
-                                <strong>研发负责人</strong> 全栈开发
-                                <em>负责</em>整个小程序的架构设计及研发，将页面场景规范配置化，利用小程序云开发Node.js能力完成AI接口调用。
-                                在原生小程序的写法基础上，基于gulp开发轻量型小程序工程化工具，实现单文件页面组件化开发、依赖处理等能力；封装小程序非侵入式语法增强类库，拓展数据状态管理、事件管理、计算属性等能力。
-                            </p>
-                        </div>
-                    </div>
-                </article>
+              <div class="item item-stage">
+                <span
+                  ><i class="iconfont icon-dot"></i>站点集成设计 ·
+                  在线作业+流程管理工具</span
+                >
+                <span>2019.07 - 2021.01</span>
+              </div>
+              <div class="item item-info">
+                <p>
+                  <em>前端开发</em>
+                  负责基于
+                  <strong>bpmn.js</strong>
+                  搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则。
+                </p>
+                <p>
+                  通过阅读
+                  <strong>
+                    <a href="https://github.com/bpmn-io/bpmn-js" target="_blank"
+                      ><i class="iconfont icon-link inline"></i>bpmn.js源码</a
+                    >
+                  </strong>
+                  来支撑业务的实现，输出了相关
+                  业务组件、配置文件，以及笔记，其中
+                  <strong>
+                    <a href="https://github.com/PL-FE/bpmn-doc" target="_blank"
+                      ><i class="iconfont icon-link inline"></i>bpmn.js笔记</a
+                    > </strong
+                  >脱敏开源到 Github，获得180+star。
+                </p>
+                <p>
+                  使用表格、表单、富文本编辑器、在线 Excel 等 Js
+                  工具，实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
+                </p>
+              </div>
             </div>
-            <div class="container-body-item">
-                <article class="article">
-                    <header class="section-hd">
-                        <span class="line"></span>
-                        <h3 class="title">专业能力</h3>
-                        <span class="line"></span>
-                    </header>
+          </article>
+        </div>
+        <div class="container-body-item">
+          <article class="article">
+            <header class="section-hd">
+              <span class="line"></span>
+              <h3 class="title">专业能力</h3>
+              <span class="line"></span>
+            </header>
 
-                    <div class="section-bd">
-                        <div class="item item-info">
-                            <p>
-                                <i class="iconfont icon-dot"></i>
-                                近4年前端学习与开发经验，2年前端工作经验。
-                            </p>
-                            <p>
-                                <i class="iconfont icon-dot"></i>
-                                掌握Web前端开发基本技能，熟悉W3C标准、HTML、CSS、UI重构、页面布局、响应式布局等，领悟视觉与设计，重视页面交互与用户体验。
-                            </p>
-                        </div>
-                    </div>
-                </article>
-                <article class="article">
-                    <header class="section-hd">
-                        <span class="line"></span>
-                        <h3 class="title">个人作品</h3>
-                        <span class="line"></span>
-                    </header>
-
-                    <div class="section-bd">
-                        <div class="item item-info">
-                            <p>
-                                <i class="iconfont icon-dot"></i>
-                                个人主页 · 技术博客
-                            </p>
-                            <p>
-                                爱好琢磨一些有趣有意思的东西，并以congm.in作为个人域名，设计细节并开发部署个人主页，搭建维护过基于Wordpress、Ghost、Docsify等的技术博客。
-                            </p>
-                            <p>
-                                <i class="iconfont icon-dot"></i>
-                                开源作品
-                            </p>
-                        </div>
-                    </div>
-                </article>
+            <div class="section-bd">
+              <div class="item item-info">
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  3年前端工作经验。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  掌握Web前端开发基本技能，熟悉W3C标准、
+                  <strong>HTML</strong> 、<strong>CSS</strong>
+                  ，具有一定的审美，重视页面交互和还原UI。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  对
+                  <strong>JavaScript</strong>
+                  、各类UI组件库、JS类库、模板引擎、MV*框架、工程化工具等有一定的认知，能够快速上手。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  熟练使用ES6语法编程，追求代码高质量可维护性。以
+                  <strong>Vue2</strong> 、<strong>Less</strong>、
+                  <strong>Webpack</strong> 、<strong>Element UI</strong>
+                  等为常用技术栈，同时对
+                  <strong>Vue2</strong> 源码有一定的了解，能够使用
+                  <strong>Vue3</strong> 进行开发。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  熟练使用 <strong>Git</strong> 进行版本控制和代码托管、<strong
+                    >Markdown</strong
+                  >
+                  进行文档编写。
+                  了解项目常规开发流程、开发调试技巧、发布部署步骤，能够使用
+                  <strong>Docker</strong> 进行打包部署。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  时刻保持好奇心，持续关注业内前沿技术，拥抱开源。
+                  工作上积极执行有责任心，具有良好的沟通合作能力、分析解决问题能力以及较强的学习能力。
+                </p>
+              </div>
             </div>
-        </main>
+          </article>
+          <article class="article">
+            <header class="section-hd">
+              <span class="line"></span>
+              <h3 class="title">个人作品</h3>
+              <span class="line"></span>
+            </header>
+
+            <div class="section-bd">
+              <div class="item item-top">
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  个人博客
+                </p>
+                <a
+                  class="item-more"
+                  href="https://pl-fe.cn"
+                  target="_blank"
+                  title="个人主页"
+                  ><i class="iconfont icon-homepage"></i
+                ></a>
+              </div>
+              <div class="item item-info">
+                <p>
+                  爱好琢磨一些有趣有意思的东西，并以
+
+                  <a href="https://pl-fe.cn" target="_blank"
+                    ><i class="iconfont icon-link inline"></i>pl-fe.cn</a
+                  >
+                  作为个人域名，使用
+                  <strong>Hexo</strong>
+                  搭建了个人博客，集成了网易云音乐、评论通知等功能。
+                </p>
+                <p>
+                  同时热爱开源精神，拥抱开源社区，乐于在
+                  <strong>
+                    <a
+                      href="https://blog.csdn.net/qq_39211165?type=blog"
+                      target="_blank"
+                      title="CSDN"
+                      ><i class="iconfont icon-link inline"></i>CSDN</a
+                    >
+                  </strong>
+                  或
+                  <strong>
+                    <a href="https://github.com/PL-FE" target="_blank"
+                      ><i class="iconfont icon-github inline"></i>Github</a
+                    >
+                  </strong>
+                  技术交流分享。
+                </p>
+              </div>
+
+              <div class="item item-top">
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  个人项目 · 基于 Vue3 的音乐网站
+                </p>
+                <a
+                  class="item-more"
+                  href="http://music.pl-fe.cn/#/"
+                  target="_blank"
+                  title="音乐网站"
+                  ><i class="iconfont icon-link"></i
+                ></a>
+              </div>
+              <div class="item item-info">
+                <p>
+                  支持登陆、在线听歌、搜索、歌单、歌手等功能，同时适配了移动端。
+                </p>
+                <p>
+                  前端使用 <strong>Vite</strong> 初始化项目，基于
+                  <strong>Vue3</strong>、<strong>TypeScript</strong>、<strong
+                    >Element Plus</strong
+                  >
+                  、<strong>Less</strong>完成界面开发， 使用
+                  <strong>Pinia</strong> 对全局数据进行统一管理。
+                </p>
+                <p>
+                  对部分页面做了缓存，对数据量大的场景使用滚动加载的形式。
+                  图片方面，采用了懒加载及缩略图等方案提升页面加载速度。
+                </p>
+                <p>
+                  使用
+                  <strong>GitHub Actions</strong> +
+                  <strong>Docker</strong> 自动部署到服务器。
+                </p>
+              </div>
+
+              <div class="item item-top">
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  个人项目 · bpmn-doc
+                </p>
+                <a
+                  class="item-more"
+                  href="https://github.com/PL-FE/bpmn-doc"
+                  target="_blank"
+                  title="bpmn-doc"
+                  ><i class="iconfont icon-link"></i
+                ></a>
+              </div>
+              <div class="item item-info">
+                当时网上关于 <strong>bpmn.js</strong>
+                的中文资料并不多,所以开源并维护这份笔记，撰写详尽自己的实现方案，加入技术群参与交流，寻求更优解。
+              </div>
+            </div>
+          </article>
+        </div>
+      </main>
     </div>
     <footer class="footer github-footer">
-        <a class="footer-link" href="https://github.com/mcc108/resume" target="_blank"><i
-                class="iconfont icon-link"></i> github.com/mcc108/resume</a>
+      <a
+        class="footer-link"
+        href="https://github.com/PL-FE/resume"
+        target="_blank"
+        ><i class="iconfont icon-link"></i> github.com/PL-FE/resume</a
+      >
     </footer>
     <footer class="footer print-footer">
-        <a class="footer-link" href="http://resume.congm.in" target="_blank"><i class="iconfont icon-link"></i>
-            网页版简历：resume.congm.in</a>
+      <a class="footer-link" href="http://pl-fe.resume.cn" target="_blank"
+        ><i class="iconfont icon-link"></i> 网页版简历：pl-fe.resume.cn</a
+      >
     </footer>
-    <a class="pdf" href="resume.pdf"><i class="iconfont icon-pdf"></i> PDF简历</a>
-</body>
-
+    <a class="pdf" href="resume.pdf"
+      ><i class="iconfont icon-pdf"></i> PDF简历</a
+    >
+  </body>
 </html>
