--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <p class="last-modified">最后更新时间：2019年06月</p>
+    <p class="last-modified">
+      最后更新时间：<%=htmlWebpackPlugin.options.updateTime%>
+    </p>
     <div class="container">
       <header class="header">
         <section class="section hd">
@@ -313,7 +315,7 @@
               </div>
               <div class="item item-info">
                 当时网上关于 <strong>bpmn.js</strong>
-                的中文资料并不多,所以开源并维护这份笔记，撰写详尽自己的实现方案，加入技术群参与交流，寻求更优解。
+                的资料并不多,所以开源并维护这份笔记，撰写详尽自己的实现方案，加入技术群参与交流，寻求更优解。
               </div>
             </div>
           </article>
