--- a/src/index.html
+++ b/src/index.html
@@ -331,8 +331,9 @@
       >
     </footer>
     <footer class="footer print-footer">
-      <a class="footer-link" href="http://pl-fe.resume.cn" target="_blank"
-        ><i class="iconfont icon-link"></i> 网页版简历：pl-fe.resume.cn</a
+      <a class="footer-link" href="http://resume.pl-fe.cn" target="_blank"
+        ><i class="iconfont icon-link"></i>
+        网页版简历：http://resume.pl-fe.cn</a
       >
     </footer>
     <a class="pdf" href="resume.pdf"
