--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           </div>
 
           <div class="job">
-            <h2>Web 前端开发工程师 <span>/ 重庆</span></h2>
+            <h2>Web 前端开发工程师 <span>/ 重庆 / 随时到岗</span></h2>
           </div>
         </section>
         <section class="section">
@@ -76,7 +76,7 @@
               <div class="item item-top">
                 <span>2019.07 ~ 2022.11</span>
                 <span class="mid">易宝（东莞）软件有限公司</span>
-                <span>工作</span>
+                <span class="job">工作</span>
               </div>
               <div class="item item-stage">
                 <span
@@ -327,7 +327,7 @@
         class="footer-link"
         href="https://github.com/PL-FE/resume"
         target="_blank"
-        ><i class="iconfont icon-link"></i> github.com/PL-FE/resume</a
+        ><i class="iconfont icon-github"></i> Github 仓库</a
       >
     </footer>
     <footer class="footer print-footer">
