--- a/src/index.html
+++ b/src/index.html
@@ -79,10 +79,7 @@
                 <span class="job">工作</span>
               </div>
               <div class="item item-stage">
-                <span
-                  ><i class="iconfont icon-dot"></i>CoNet ·
-                  在线作业+自动化工具</span
-                >
+                <span><i class="iconfont icon-dot"></i>CoNet · PC</span>
                 <span>2021.02 - 2022.11</span>
               </div>
               <div class="item item-info">
@@ -98,36 +95,50 @@
                   <strong>Element UI</strong> 等。
                 </p>
                 <p>
-                  <em>项目搭建</em>使用
-                  <strong>Vue Cli</strong> 进行项目搭建，结合
+                  <em>1. 项目搭建</em>使用
+                  <strong>Vue Cli</strong> 进行项目搭建， 结合
                   <strong>Eslint</strong> 和
                   <strong>Githook</strong>
                   保证代码质量及校验提交信息，引入字体图标库，减少 http 请求。
                 </p>
                 <p>
-                  <em>公共基础</em>借鉴
-                  <strong>Element UI</strong> 组件库的思路，通过自定义
-                  loader，实现可演示可复制代码的轻量级组件文档库，加速理解公共组件的使用。
-                  统一常用函数、指令、api等。
+                  <em>2. 公共基础</em>借鉴
+                  <strong>Element UI</strong> 组件库的思路，通过
+                  <strong>自定义 loader</strong>
+                  ，实现可演示可复制代码的轻量级组件文档库，加速团队理解公共组件。
                 </p>
                 <p>
-                  <em>模块开发</em>负责迭代系统模块及地图可视化操作。
+                  统一进行请求拦截，增加可选配置项，如 No Loading 或者
+                  允许取消请求等
+                  ，响应拦截，提前捕获异常，根据状态码，显示对应的消息通知，
+                </p>
+                <p>
+                  主动
+                  <em>codeview</em>
+                  ，发现可优化、不统一、规范等问题会及时知会。
+                </p>
+                <p>
+                  根据 Network、Performance 从
+                  <strong>网络请求</strong>、<strong>JavaScript 耗时</strong>
+                  、<strong>dom渲染</strong>等多方面优化页面渲染，如将频繁被触发的接口、函数使用节流函数。需要多次调用的单一接口，调整为批量接口，调用一次。
+                  动态组件使用<strong>keep-live</strong> 缓存等。
+                  首屏加载速度及切换业务组件速度得到大幅度提升。
+                </p>
+                <p>
+                  <em>3. 模块开发</em>负责迭代系统模块及地图可视化操作。
                   由于项目中数据呈现基本为表格及表单等形式，输出了
                   <strong>CustomTable</strong> 、<strong>CustomForm</strong>
                   、<strong>CustomDialog</strong> 、<strong
                     >LoadingButton</strong
                   >
                   等公共组件,能够满足80%的业务需求。 及针对优化大数据量
-                  <strong>el-select</strong> 的指令。
-                  对地图进行实例化管理，将地图的操作封装成类，实现地图的多边形绘制、框选、高亮、计算距离等功能，增强代码复用。
+                  <strong>v-select-more</strong> 的指令。
+                  对地图进行实例化管理，将地图的操作封装成类，增强代码复用。通过实现类的方法为地图增加多边形绘制、框选、高亮、计算距离等功能。
                 </p>
               </div>
 
               <div class="item item-stage">
-                <span
-                  ><i class="iconfont icon-dot"></i>站点集成设计 ·
-                  在线作业+流程管理工具</span
-                >
+                <span><i class="iconfont icon-dot"></i>站点集成设计 · PC</span>
                 <span>2019.07 - 2021.01</span>
               </div>
               <div class="item item-info">
@@ -138,7 +149,7 @@
                   搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则。
                 </p>
                 <p>
-                  通过阅读
+                  <em>1. 源码阅读</em> 通过阅读
                   <strong>
                     <a href="https://github.com/bpmn-io/bpmn-js" target="_blank"
                       ><i class="iconfont icon-link inline"></i>bpmn.js源码</a
@@ -153,8 +164,9 @@
                   >脱敏开源到 Github，获得180+star。
                 </p>
                 <p>
-                  使用表格、表单、富文本编辑器、在线 Excel 等 Js
-                  工具，实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
+                  <em>2. 善于使用 Js 工具</em>
+                  使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
+                  工具实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
                 </p>
               </div>
             </div>
@@ -191,9 +203,13 @@
                   熟练使用ES6语法编程，追求代码高质量可维护性。以
                   <strong>Vue2</strong> 、<strong>Less</strong>、
                   <strong>Webpack</strong> 、<strong>Element UI</strong>
-                  等为常用技术栈，同时对
+                  等为常用技术栈，对
                   <strong>Vue2</strong> 源码有一定的了解，能够使用
                   <strong>Vue3</strong> 进行开发。
+                </p>
+                <p>
+                  <i class="iconfont icon-dot"></i>
+                  熟练使用谷歌开发者工具进行代码调试定位，能够使用浏览器代理插件调试生产项目。
                 </p>
                 <p>
                   <i class="iconfont icon-dot"></i>
