--- a/src/index.html
+++ b/src/index.html
@@ -110,12 +110,12 @@
                 <p>
                   统一进行请求拦截，增加可选配置项，如 No Loading 或者
                   允许取消请求等
-                  ，响应拦截，提前捕获异常，根据状态码，显示对应的消息通知，
+                  ，响应拦截，提前捕获异常，根据状态码，显示对应的消息通知。
                 </p>
                 <p>
                   主动
                   <em>codeview</em>
-                  ，发现可优化、不统一、规范等问题会及时知会。
+                  ，提前发现不规范代码、可优化的代码，避免坏代码的提交。
                 </p>
                 <p>
                   根据 Network、Performance 从
@@ -161,7 +161,7 @@
                     <a href="https://github.com/PL-FE/bpmn-doc" target="_blank"
                       ><i class="iconfont icon-link inline"></i>bpmn.js笔记</a
                     > </strong
-                  >脱敏开源到 Github，获得180+star。
+                  >脱敏开源到 Github，获得190+star。
                 </p>
                 <p>
                   <em>2. 善于使用 Js 工具</em>
@@ -209,7 +209,7 @@
                 </p>
                 <p>
                   <i class="iconfont icon-dot"></i>
-                  熟练使用谷歌开发者工具进行代码调试定位，能够使用浏览器代理插件调试生产项目。
+                  熟练使用谷歌开发者工具进行代码调试定位，根据控制台的输出及请求的调用栈及事件的绑定等快速定位问题。
                 </p>
                 <p>
                   <i class="iconfont icon-dot"></i>
@@ -319,7 +319,7 @@
               <div class="item item-top">
                 <p>
                   <i class="iconfont icon-dot"></i>
-                  个人项目 · bpmn-doc
+                  个人项目 · bpmn-doc (192 Starred / 70 Fork)
                 </p>
                 <a
                   class="item-more"
@@ -331,7 +331,7 @@
               </div>
               <div class="item item-info">
                 当时网上关于 <strong>bpmn.js</strong>
-                的资料并不多,所以开源并维护这份笔记，撰写详尽自己的实现方案，加入技术群参与交流，寻求更优解。
+                的资料并不多,所以开源并维护这份笔记，撰写详尽自己的实现方案，并加入技术群参与交流，寻求更优解。
               </div>
             </div>
           </article>
