# fix 修复错别字

--- a/src/index.html
+++ b/src/index.html
@@ -102,8 +102,7 @@
                   保证代码质量及校验提交信息，引入字体图标库，减少 http 请求。
                 </p>
                 <p>
-                  <em>2. 公共基础</em>借鉴
-                  <strong>Element UI</strong> 组件库的思路，通过
+                  <em>2. 公共基础</em>负责实现组件文档库，通过
                   <strong>自定义 loader</strong>
                   ，实现可演示可复制代码的轻量级组件文档库，加速团队理解公共组件。
                 </p>
@@ -121,7 +120,7 @@
                   根据 Network、Performance 从
                   <strong>网络请求</strong>、<strong>JavaScript 耗时</strong>
                   、<strong>dom渲染</strong>等多方面优化页面渲染，如将频繁被触发的接口、函数使用节流函数。需要多次调用的单一接口，调整为批量接口，调用一次。
-                  动态组件使用<strong>keep-live</strong> 缓存等。
+                  动态组件使用<strong>keep-alive</strong> 缓存等。
                   首屏加载速度及切换业务组件速度得到大幅度提升。
                 </p>
                 <p>
