--- a/src/index.html
+++ b/src/index.html
@@ -103,12 +103,12 @@
                 </p>
                 <p>
                   <em>2. 公共基础</em>负责实现组件文档库，通过
-                  <strong>自定义 loader</strong>
-                  ，实现可演示可复制代码的轻量级组件文档库，加速团队理解公共组件。
+                  <strong>自定义 md-loader</strong>加载
+                  <strong>Markdown文件</strong>
+                  ，生成可演示可复制代码的轻量级组件文档库，加速团队理解公共组件。
                 </p>
                 <p>
-                  统一进行请求拦截，增加可选配置项，如 No Loading 或者
-                  允许取消请求等
+                  统一进行请求拦截，增加可选配置项，
                   ，响应拦截，提前捕获异常，根据状态码，显示对应的消息通知。
                 </p>
                 <p>
@@ -117,11 +117,9 @@
                   ，提前发现不规范代码、可优化的代码，避免坏代码的提交。
                 </p>
                 <p>
-                  根据 Network、Performance 从
+                  从
                   <strong>网络请求</strong>、<strong>JavaScript 耗时</strong>
-                  、<strong>dom渲染</strong>等多方面优化页面渲染，如将频繁被触发的接口、函数使用节流函数。需要多次调用的单一接口，调整为批量接口，调用一次。
-                  动态组件使用<strong>keep-alive</strong> 缓存等。
-                  首屏加载速度及切换业务组件速度得到大幅度提升。
+                  、<strong>dom渲染</strong>等多方面进行分析，对页面性能进行优化。
                 </p>
                 <p>
                   <em>3. 模块开发</em>负责迭代系统模块及地图可视化操作。
@@ -145,10 +143,15 @@
                   <em>前端开发</em>
                   负责基于
                   <strong>bpmn.js</strong>
-                  搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则。
+                  搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则，以及任务管理模块的实现。
                 </p>
                 <p>
-                  <em>1. 源码阅读</em> 通过阅读
+                  <em>1. 善于使用 Js 工具</em>
+                  使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
+                  工具实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
+                </p>
+                <p>
+                  <em>2. 源码阅读</em> 通过阅读
                   <strong>
                     <a href="https://github.com/bpmn-io/bpmn-js" target="_blank"
                       ><i class="iconfont icon-link inline"></i>bpmn.js源码</a
@@ -161,11 +164,6 @@
                       ><i class="iconfont icon-link inline"></i>bpmn.js笔记</a
                     > </strong
                   >脱敏开源到 Github，获得190+star。
-                </p>
-                <p>
-                  <em>2. 善于使用 Js 工具</em>
-                  使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
-                  工具实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
                 </p>
               </div>
             </div>
@@ -200,24 +198,23 @@
                 <p>
                   <i class="iconfont icon-dot"></i>
                   熟练使用ES6语法编程，追求代码高质量可维护性。以
-                  <strong>Vue2</strong> 、<strong>Less</strong>、
-                  <strong>Webpack</strong> 、<strong>Element UI</strong>
+                  <strong>Vue2</strong> 、<strong>Less</strong>、<strong
+                    >Element UI</strong
+                  >
                   等为常用技术栈，对
-                  <strong>Vue2</strong> 源码有一定的了解，能够使用
+                  <strong>Vue2源码</strong> 有一定的了解，能够使用
                   <strong>Vue3</strong> 进行开发。
-                </p>
-                <p>
-                  <i class="iconfont icon-dot"></i>
-                  熟练使用谷歌开发者工具进行代码调试定位，根据控制台的输出及请求的调用栈及事件的绑定等快速定位问题。
                 </p>
                 <p>
                   <i class="iconfont icon-dot"></i>
                   熟练使用 <strong>Git</strong> 进行版本控制和代码托管、<strong
                     >Markdown</strong
                   >
-                  进行文档编写。
-                  了解项目常规开发流程、开发调试技巧、发布部署步骤，能够使用
-                  <strong>Docker</strong> 进行打包部署。
+                  进行文档编写。 熟悉项目常规开发流程，能够使用
+                  <strong>Webpack</strong>
+                  进行常用的配置，并对其运行机制有一定的了解。
+                  熟悉开发调试技巧，熟练借助工具进行代码调试定位。
+                  了解部署步骤，能够使用<strong>Docker</strong> 进行打包部署。
                 </p>
                 <p>
                   <i class="iconfont icon-dot"></i>
