--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="job">
-          <h2>Web 前端开发工程师 <span>/ 重庆 / 随时到岗</span></h2>
+          <h2>Web 前端开发工程师 <span> / 随时到岗</span></h2>
         </div>
       </section>
       <section class="section">
